// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render bold text 1`] = `
<div>
  <div
    class="Textweb__Text-dvo2dp-0 djUVTE"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render regular text 1`] = `
<div>
  <div
    class="Textweb__Text-dvo2dp-0 kgLoKE"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render text with display content auto aligned when align prop is of value "inherit" 1`] = `
<div>
  <div
    class="Textweb__Text-dvo2dp-0 dFAqUy"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render text with display content auto aligned when align prop is of value "initial" 1`] = `
<div>
  <div
    class="Textweb__Text-dvo2dp-0 caFnTx"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render text with display content center aligned 1`] = `
<div>
  <div
    class="Textweb__Text-dvo2dp-0 hqzAEM"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render text with display content right aligned 1`] = `
<div>
  <div
    class="Textweb__Text-dvo2dp-0 gRelOf"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render underlined text 1`] = `
<div>
  <div
    class="Textweb__Text-dvo2dp-0 llgsMQ"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;
